# azure-rag-app

./: .gitignore  README.md  rag-workspace.code-workspace
rag-app/: Dockerfile  commands.env
rag-app/argocd/staging/: deployment.yaml  service.yaml
rag-app/data_samples/: so_qna.json
rag-app/data_samples/stack_overflow/: application-not-showing-in-argocd.md  azure-openai-byod-incorrect-answers.md  helm-values-yml-not-applied-in-argocd.md  pass-array-of-objects-to-helm.md  query-azure-openai-with-images.md  secure-environment-repo-gitops.md
rag-app/service/: create_index.py  embeddings_cache.json  ingest_so.py  main.py  models.py  pyproject.toml  quick_query.py  rag_service.py  requirements.txt  ruff.sh  run.sh  test_imports.py
