[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-core>=1.35.0",
    "azure-identity>=1.24.0",
    "azure-search-documents==11.6.0b1",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "mypy>=1.17.1",
    "num2words>=0.5.14",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.34.3",
]
